syntax = "proto3";
package bluk_games;

// Imports
import "types/user.proto";
import "types/token.proto";
import "types/permissions.proto";

// Services
service UserService {
  rpc FindOne (FindOneUserRequest) returns (User) {}
  rpc FetchMe (FetchMeRequest) returns (FetchMeResponse) {}
};

service TokenService {
  rpc GenerateToken (GenerateTokenRequest) returns (Token) {}
  rpc FetchToken (FetchTokenRequest) returns (Token) {}
}

// Requests/Responses
message FindOneUserRequest {
  string id = 1;
}

message FetchMeRequest {}

message FetchMeResponse {
  User user = 1;
  Token token = 2;
}

message GenerateTokenRequest {
  TokenType type = 1;
  string entityId = 2;
  repeated Permission permissions = 3;
};

message FetchTokenRequest {
  string id = 1;
};